--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "3.6"
   - "nightly"
-install: "pip install -r requirements.txt"
+install: 
+  - "pip install ."
+  - "pip install -r requirements.txt"
 script: "pytest"
