--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 install: 
   - "pip install ."
   - "pip install -r requirements.txt"
-script: "pytest"
+script: "coverage run --source=py_fake_server setup.py test"
