--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: python
 python:
   - "3.6"
-  - "nightly"
 install: 
   - "pip install ."
-  - "pip install -r requirements.txt"
-script: "coverage run --source=py_fake_server setup.py test"
+script: "python setup.py test"
